--- a/styles.css
+++ b/styles.css
@@ -6,3 +6,7 @@ available in the app when your plugin is enabled.
 If your plugin does not need CSS, delete this file.
 
 */
+button.modal-button {
+	float: right;
+	margin: 0.75em 0;
+}
